CSS: for printing, avoid page-breaks inside tables, figures, and exercises (PR #2583)

--- a/css/components/_printing.scss
+++ b/css/components/_printing.scss
@@ -23,7 +23,7 @@
     margin: 0;
   }
 
-  .ptx-sagecell {
+  .ptx-sagecell, .tabular, .table-like, .figure-like, .exercise-like {
     break-inside: avoid;
   }
 
